# mcp-suite

./: .coveragerc  .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  README.md  _.pre-commit-config.yaml  cameraCrop.ipynb  conftest.py  coverage.xml  direct_server_test.py  flake8.json  mypy.ini  pydantic_model_testing_guide.md  pyproject.toml  pytest.ini  qt_segfault_report.md  run_server_tests.py  transcriber.ipynb
.cursor/: mcp.json
.cursor/rules/: make_pytest.mdc  run_pytest.mdc
.cursor/rules/development/: coding.mdc  format.mdc  knowledge.mdc  make_pytest.mdc  run_pytest.mdc
.cursor/rules/jira/: start-issue.mdc
.cursor/rules/mcp-server/: create_mpc.mdc  create_mpc_server.mdc
.cursor/rules/operations/: onboarding.mdc
.cursor/rules/pre-commit/: run_pylint.mdc  run_tests.mdc
.github/: .flake8
.github/linters/: .flake8  yaml-lint.yml
.github/workflows/: lint-test.yml  linter.yml
docs/: changes.md  sprint_development_plan.md  sprint_planning_jira.md  system_architecture.md  technical_requirements.md  technology_stack.md  testing_guidelines.md  user_stories.md  vision_statement.md
docs/mcp-suite/docs/: technical_requirements.md  vision_statement.md
research/: agents.ipynb  cameraCrop.ipynb  editor_demo.ipynb  hotreload.ipynb  redis_model.ipynb  transcribe.ipynb
research/linter_test/: lintenting_test.yml
src/config/: env.py
src/config/tests/: test_env.py
src/mcp_qa/: __init__.py  __main__.py
src/mcp_qa/config/: logger.py  tools.py
src/mcp_qa/tools/: __init__.py  register_tools.py
src/mcp_qa/tools/linter/: flake8_report.py  pylint_tool.py
src/mcp_qa/tools/testing/: coverage_report.py  pytest_report.py
src/mcp_qa/utils/: decorators.py  module_utils.py
src/mcp_qa/utils/tests/: test_decorators.py  test_git_utils.py  test_module_utils.py
src/mcp_suite/: README.md  __init__.py  __main__.py  core.py  launch.py
src/mcp_suite/base/: base_service.py
src/mcp_suite/base/models/: __init__.py  redis_singleton.py  singleton.py
src/mcp_suite/base/redis/: redis_manager.py  redis_singleton.py  repository.py
src/mcp_suite/base/tests/: test_account.py  test_credentials.py  test_redis_singleton.py  test_repository.py  test_singleton.py
src/mcp_suite/models/: __init__.py  redis_model.py  redis_store.py
src/mcp_suite/redis/: __init__.py  cleanup.py  client.py  server.py  utils.py
src/mcp_suite/servers/: base_server.py
src/mcp_suite/service/: __init__.py  base_service.py
src/mcp_suite/tests/: conftest.py  test_base_service.py  test_hello.py  test_launch.py  test_main.py
src/tests/: __init__.py  test_main.py
tests/: test_env.py  test_launch.py  test_main.py
tests/models/: test_redis_store.py
tests/test_servers/: __init__.py  test_base_server.py  test_base_server_integration.py  test_base_server_mock_redis.py
(+163 files in other folders)
